<resources>
    <string name="app_name">DiagVet</string>
    <string name="name">név</string>
    <string name="password">jelszó</string>
    <string name="login">bejelentkezés</string>
    <string name="register">regisztráció</string>
    <string name="registration">Regisztráció</string>
    <string name="cancel">vissza</string>
    <string name="user_name">felhasználó név</string>
    <string name="email_address">email</string>
    <string name="password_again">jelszó újra</string>
    <string name="phone_number">telefon szám</string>
    <string name="details">Description</string>
    <string name="delete">törlés</string>
    <string name="modify">módosítás</string>
    <string name="title">title</string>
    <string name="edit">edit</string>
    <string name="save">save</string>
    <string name="status">status</string>
    <string name="category">category</string>
    <string name="due">due to</string>
    <string name="add">Betegség hozzáadása</string>
    <string name="logout">Kijelentkezés</string>
    <string name="licenseNo">licensz szám</string>

    <string-array name="goal_texts" >
        <item>AAAAAAAAAAAA</item>
        <item>goaltext</item>
    </string-array>

    <string-array name="goal_desc" >
        <item>AAAAAAAAAAAA</item>
        <item>goaldesc</item>
    </string-array>

    <string-array name="goal_status" >
        <item>AAAAAAAAAAAA</item>
        <item>goalstatus</item>
    </string-array>

    <string-array name="goal_due" >
        <item>AAAAAAAAAAAA</item>
        <item>goaldue</item>
    </string-array>

    <string-array name="goal_category">
        <item>AAAAAAAAAAAA</item>
        <item>goalcats</item>
    </string-array>
</resources>