<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".NewItemActivity">

    <TextView
        android:id="@+id/modifyTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/register_margin_top"
        android:text="@string/add"
        android:textSize="24sp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/register_margin_top"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/modifyTextView"/>

    <EditText
        android:id="@+id/detailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/register_margin_top"
        android:layout_marginLeft="@dimen/default_margin_side"
        android:layout_marginRight="@dimen/default_margin_side"
        android:ems="10"
        android:hint="@string/details"
        android:inputType="text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/titleEditText"/>

    <EditText
        android:id="@+id/statusEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/register_margin_top"
        android:layout_marginLeft="@dimen/default_margin_side"
        android:layout_marginRight="@dimen/default_margin_side"
        android:ems="10"
        android:hint="@string/status"
        android:inputType="text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/detailEditText"/>

    <EditText
        android:id="@+id/categoryEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/register_margin_top"
        android:layout_marginLeft="@dimen/default_margin_side"
        android:layout_marginRight="@dimen/default_margin_side"
        android:ems="10"
        android:hint="@string/category"
        android:inputType="text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/statusEditText"/>

    <EditText
        android:id="@+id/dueEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_margin_side"
        android:layout_marginTop="@dimen/register_margin_top"
        android:layout_marginRight="@dimen/default_margin_side"
        android:ems="10"
        android:hint="@string/due"
        android:inputType="date"
        android:layout_below="@id/categoryEditText"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dueEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="save"
            android:text="@string/save"
            app:backgroundTint="#2196F3" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:onClick="cancel"
            android:text="@string/cancel"
            app:backgroundTint="#2196F3" />
    </LinearLayout>
</RelativeLayout>
