<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/GoalText"
            style="@style/GoalTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="?android:textColorSecondary" />

        <TextView
            android:id="@+id/subTitle"
            style="@style/GoalDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/GoalText"
            android:padding="8dp"
            android:text="@string/details" />

        <TextView
            android:id="@+id/status"
            style="@style/GoalDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/subTitle"
            android:padding="8dp"
            android:textColor="@color/purple_200"
            android:text="@string/details" />

        <TextView
            android:id="@+id/category"
            style="@style/GoalDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/status"
            android:layout_marginBottom="12dp"
            android:padding="8dp"
            android:textColor="@color/teal_700" />

        <TextView
            android:id="@+id/due"
            style="@style/GoalDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/category"
            android:layout_marginBottom="12dp"
            android:padding="8dp"
            android:textColor="@color/red"
            android:layout_centerHorizontal="true"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/due">

            <Button
                android:id="@+id/modify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modify"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"/>

            <Button
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete"
                android:layout_marginRight="12dp"/>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>